--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="header-wrapper">
       <div class="menu">
         <a class="header-logo" href="#0">
-          <img src="../svg/noemi-logo.svg" alt="Логотип NOEMI" class="header-logo-img" >
+          <img src="svg/noemi-logo.svg" alt="Логотип NOEMI" class="header-logo-img" >
         </a>
         <nav class="header-menu">
           <input class="checkbox" type="checkbox">
@@ -117,7 +117,7 @@
         <article class="news">
           <div class="new-img-wrapper">
             <a href="#0" class="news-img-link">
-              <img src="../images/last-post1.jpg" alt="Человек на пляже" class="news-img" >
+              <img src="images/last-post1.jpg" alt="Человек на пляже" class="news-img" >
             </a>
           </div>
           <div class="news-text">
@@ -143,7 +143,7 @@
         </article>
         <article class="news">
           <a href="#0" class="news-img">
-            <img src="../images/last-post2.jpg" alt="Йога у моря" class="news-img" width="381">
+            <img src="images/last-post2.jpg" alt="Йога у моря" class="news-img" width="381">
           </a>
           <div class="news-text">
             <ul class="news-tags">
@@ -171,7 +171,7 @@
         </article>
         <article class="news">
           <a href="#0" class="news-img">
-            <img src="..//images/last-post3.jpg" alt="Девушка на концерте" class="news-img" width="381">
+            <img src="images/last-post3.jpg" alt="Девушка на концерте" class="news-img" width="381">
           </a>
           <div class="news-text">
             <ul class="news-tags">
@@ -197,7 +197,7 @@
         </article>
         <article class="news">
           <a href="#0" class="news-img">
-            <img src="../images/last-post4.jpg" alt="Еда на столе" class="news-img" width="381">
+            <img src="images/last-post4.jpg" alt="Еда на столе" class="news-img" width="381">
           </a>
           <div class="news-text">
             <ul class="news-tags">
@@ -225,7 +225,7 @@
         </article>
         <article class="news">
           <a href="#0" class="news-img">
-            <img src="../images/last-post5.jpg" alt="Подушка с принтом" class="news-img" width="381">
+            <img src="images/last-post5.jpg" alt="Подушка с принтом" class="news-img" width="381">
           </a>
           <div class="news-text">
             <ul class="news-tags">
@@ -260,7 +260,7 @@
           <h3 class="new-posts-top">новые посты</h3>
           <article class="new">
             <a href="#0" class="new-post-link">
-              <img src="../images/2.jpg" alt="Человек на пляже" class="new-post-img" width="70">
+              <img src="images/2.jpg" alt="Человек на пляже" class="new-post-img" width="70">
             </a>
             <div class="new-post">
               <time class="new-post-date">14 июня 2019</time>
@@ -271,7 +271,7 @@
           </article>
           <article class="new">
             <a href="#0" class="new-post-link">
-              <img src="../images/151.jpg" alt="Йога у моря" class="new-post-img" width="70">
+              <img src="images/151.jpg" alt="Йога у моря" class="new-post-img" width="70">
             </a>
             <div class="new-post">
               <time class="new-post-date">14 июня 2019</time>
@@ -282,7 +282,7 @@
           </article>
           <article class="new">
             <a href="#0" class="new-post-link">
-              <img src="../images/45.jpg" alt="Комната с креслом" class="new-post-img" width="70">
+              <img src="images/45.jpg" alt="Комната с креслом" class="new-post-img" width="70">
             </a>
             <div class="new-post">
               <time class="new-post-date">14 июня 2019</time>
@@ -293,7 +293,7 @@
           </article>
           <article class="new">
             <a href="#0" class="new-post-link">
-              <img src="../images/501.jpg" alt="Еда на столе" class="new-post-img" width="70">
+              <img src="images/501.jpg" alt="Еда на столе" class="new-post-img" width="70">
             </a>
             <div class="new-post">
               <time class="new-post-date">14 июня 2019</time>
@@ -304,7 +304,7 @@
           </article>
           <article class="new">
             <a href="#0" class="new-post-link">
-              <img src="../images/7.jpg" alt="Девушки с распущенными волосами" class="new-post-img" width="70">
+              <img src="images/7.jpg" alt="Девушки с распущенными волосами" class="new-post-img" width="70">
             </a>
             <div class="new-post">
               <time class="new-post-date">14 июня 2019</time>
@@ -398,9 +398,9 @@
         <section class="goods-item">
           <div class="goods-item__img">
             <picture >
-              <source media="(max-width=768px" ) srcset="../images/shop-item-mobile1.jpg">
-              <source media="(max-width=1200px" ) srcset="../images/shop-item-tablet1.jpg">
-              <img src="../images/shop-item-mobile1.jpg" alt="подушка на диване">
+              <source media="(max-width=768px" ) srcset="images/shop-item-mobile1.jpg">
+              <source media="(max-width=1200px" ) srcset="images/shop-item-tablet1.jpg">
+              <img src="images/shop-item-desk1.jpg" alt="подушка на диване">
             </picture>
           </div>
           <div class="goods-item__border">
@@ -422,9 +422,9 @@
         </section>
         <section class="goods-item">
           <picture class="goods-item__img">
-            <source media="(max-width=768px" ) srcset="../images/shop-item-mobile2.jpg">
-            <source media="(max-width=1200px" ) srcset="../images/shop-item-tablet2.jpg">
-            <img src="../images/shop-item-mobile2.jpg" alt="Кукла «Зайчик»">
+            <source media="(max-width=768px" ) srcset="images/shop-item-mobile2.jpg">
+            <source media="(max-width=1200px" ) srcset="images/shop-item-tablet2.jpg">
+            <img src="images/shop-item-mobile2.jpg" alt="Кукла «Зайчик»">
           </picture>
           <div class="goods-item__border">
             <div class="goods-item__content">
@@ -443,9 +443,9 @@
         </section>
         <section class="goods-item">
           <picture class="goods-item__img">
-            <source media="(max-width=768px" ) srcset="../images/shop-item-mobile3.jpg">
-            <source media="(max-width=1200px" ) srcset="../images/shop-item-tablet3.jpg">
-            <img src="../images/shop-item-mobile3.jpg" alt="Шестиугольная рамка">
+            <source media="(max-width=768px" ) srcset="images/shop-item-mobile3.jpg">
+            <source media="(max-width=1200px" ) srcset="images/shop-item-tablet3.jpg">
+            <img src="images/shop-item-mobile3.jpg" alt="Шестиугольная рамка">
           </picture>
           <div class="goods-item__border">
             <div class="goods-item__content">
@@ -474,17 +474,17 @@
         <ul class="social-list">
           <li class="social-resource">
             <a class="social-resource-link" href="#0">
-              <img src="../svg/001-dribbble.svg" alt="dribbble.svg" width="20px">
+              <img src="svg/001-dribbble.svg" alt="dribbble.svg" width="20px">
             </a>
           </li>
           <li class="social-resource">
             <a class="social-resource-link" href="#0">
-              <img src="../svg/001-pinterest.svg" alt="pinterest" width="20px">
+              <img src="svg/001-pinterest.svg" alt="pinterest" width="20px">
             </a>
           </li>
           <li class="social-resource">
             <a class="social-resource-link" href="#0">
-              <img src="../svg//003-tumblr.svg" alt="tumblr" width="20px">
+              <img src="svg//003-tumblr.svg" alt="tumblr" width="20px">
             </a>
           </li>
         </ul>
@@ -497,7 +497,7 @@
     <div class="popup">
       <div class="popup-btn-close">
         <button class="btn-close">
-          <img src="../svg/form-x.svg" alt="кнопка закрыть">
+          <img src="svg/form-x.svg" alt="кнопка закрыть">
         </button>
       </div>
       <div class="popup-wrapper">
