--- a/index.html
+++ b/index.html
@@ -505,18 +505,18 @@
         </div>
         <h2 class="popup-title"> ваш фидбек</h2>
         <form class="popup-form">
-          <div>
+          <div class="popup-select">
             <label for="select-visiting">Как часто вы заходите на сайт?</label>
-            <select class="popup-select" name="visiting" id="select-visiting">
+            <select class="popup-select__text" name="visiting" id="select-visiting">
               <option>Почти каждый день</option>
               <option>Раз в несколько дней</option>
               <option>Раз в несколько недель</option>
               <option>Несколько раз в год</option>
             </select>
           </div>
-          <div class="popup-radio">
+          <div class="popup-select-radio">
             <span class="popup-radio-text"> Вы подписаны на e-mail рассылку?</span>
-            <label>
+            <label class="label-radio">
               <input type="radio" class="radio" name="radio-mailing">
               <span class="radio-malling-text">Да</span>
             </label>
