--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
           <img src="svg/noemi-logo.svg" alt="Логотип NOEMI" class="header-logo-img" >
         </a>
         <nav class="header-menu">
-          <input class="checkbox" type="checkbox">
-          <label class="menu-btn">
+          <div class="menu-btn">
             <span></span>
-          </label>
+          </div>
+          <input class="checkbox" type="checkbox">
           <ul class="menu-list">
             <li class="menu-list-item">
               <a class="menu-link" href="#0">главная</a>
@@ -73,7 +73,7 @@
               </li>
             </ul>
             <h2 class="treand-title">
-              <a href="#0" class="treand-title-link"> сыры на красивых картинках из интернета какие они на вкус? </a>
+              <a href="#0" class="treand-title-link">сыры на красивых картинках из интернета: какие они на вкус? </a>
             </h2>
           </div>
         </article>
