--- a/index.html
+++ b/index.html
@@ -396,11 +396,13 @@
       <div class="goods">
         <section class="goods-item">
           <div class="goods-item__img">
-            <picture >
-              <source media="(max-width=768px" ) srcset="images/shop-item-mobile1.jpg">
-              <source media="(max-width=1200px" ) srcset="images/shop-item-tablet1.jpg">
-              <img src="images/shop-item-desk1.jpg" alt="подушка на диване">
-            </picture>
+            <a href="#0">
+              <picture >
+                <source media="(max-width=768px" ) srcset="images/shop-item-mobile1.jpg">
+                <source media="(max-width=1200px" ) srcset="images/shop-item-tablet1.jpg">
+                <img src="images/shop-item-desk1.jpg" alt="подушка на диване">
+              </picture>
+            </a>
           </div>
           <div class="goods-item__border">
             <div class="goods-item__content">
@@ -420,11 +422,13 @@
 
         </section>
         <section class="goods-item">
-          <picture class="goods-item__img">
-            <source media="(max-width=768px" ) srcset="images/shop-item-mobile2.jpg">
-            <source media="(max-width=1200px" ) srcset="images/shop-item-tablet2.jpg">
-            <img src="images/shop-item-desk2.jpg" alt="Кукла «Зайчик»">
-          </picture>
+          <a href="#0">
+            <picture class="goods-item__img">
+              <source media="(max-width=768px" ) srcset="images/shop-item-mobile2.jpg">
+              <source media="(max-width=1200px" ) srcset="images/shop-item-tablet2.jpg">
+              <img src="images/shop-item-desk2.jpg" alt="Кукла «Зайчик»">
+            </picture>
+          </a>
           <div class="goods-item__border">
             <div class="goods-item__content">
               <h2 class="goods_item__title">Кукла «Зайчик»</h2>
@@ -441,11 +445,13 @@
           </div>
         </section>
         <section class="goods-item">
-          <picture class="goods-item__img">
-            <source media="(max-width=768px" ) srcset="images/shop-item-mobile3.jpg">
-            <source media="(max-width=1200px" ) srcset="images/shop-item-tablet3.jpg">
-            <img src="images/shop-item-desk3.jpg" alt="Шестиугольная рамка">
-          </picture>
+          <a href="#0">
+            <picture class="goods-item__img">
+              <source media="(max-width=768px" ) srcset="images/shop-item-mobile3.jpg">
+              <source media="(max-width=1200px" ) srcset="images/shop-item-tablet3.jpg">
+              <img src="images/shop-item-desk3.jpg" alt="Шестиугольная рамка">
+            </picture>
+          </a>
           <div class="goods-item__border">
             <div class="goods-item__content">
               <h2 class="goods_item__title">Шестиугольная рамка</h2>
