--- a/index.html
+++ b/index.html
@@ -398,8 +398,8 @@
           <div class="goods-item__img">
             <a href="#0">
               <picture >
-                <source media="(max-width=768px" ) srcset="images/shop-item-mobile1.jpg">
-                <source media="(max-width=1200px" ) srcset="images/shop-item-tablet1.jpg">
+                <source media="(max-width: 768px)" srcset="images/shop-item-mobile1.jpg">
+                <source media="(max-width: 1200px)" srcset="images/shop-item-tablet1.jpg">
                 <img src="images/shop-item-desk1.jpg" alt="подушка на диване">
               </picture>
             </a>
@@ -424,8 +424,8 @@
         <section class="goods-item">
           <a href="#0">
             <picture class="goods-item__img">
-              <source media="(max-width=768px" ) srcset="images/shop-item-mobile2.jpg">
-              <source media="(max-width=1200px" ) srcset="images/shop-item-tablet2.jpg">
+              <source media="(max-width: 768px)" srcset="images/shop-item-mobile2.jpg">
+              <source media="(max-width: 1200px)" srcset="images/shop-item-tablet2.jpg">
               <img src="images/shop-item-desk2.jpg" alt="Кукла «Зайчик»">
             </picture>
           </a>
@@ -447,8 +447,8 @@
         <section class="goods-item">
           <a href="#0">
             <picture class="goods-item__img">
-              <source media="(max-width=768px" ) srcset="images/shop-item-mobile3.jpg">
-              <source media="(max-width=1200px" ) srcset="images/shop-item-tablet3.jpg">
+              <source media="(max-width: 768px)" srcset="images/shop-item-mobile3.jpg">
+              <source media="(max-width: 1200px)" srcset="images/shop-item-tablet3.jpg">
               <img src="images/shop-item-desk3.jpg" alt="Шестиугольная рамка">
             </picture>
           </a>
