--- a/index.html
+++ b/index.html
@@ -114,11 +114,9 @@
     <div class="page-wrapper">
       <main class="main">
         <article class="news">
-          <div class="new-img-wrapper">
-            <a href="#0" class="news-img-link">
-              <img src="images/last-post1.jpg" alt="Человек на пляже" class="news-img" >
-            </a>
-          </div>
+          <a href="#0" class="news-img-link">
+            <img src="images/last-post1.jpg" alt="Человек на пляже" class="news-img" >
+          </a>
           <div class="news-text">
             <ul class="news-tags">
               <li class="news-tag-item">
@@ -141,8 +139,8 @@
           </div>
         </article>
         <article class="news">
-          <a href="#0" class="news-img">
-            <img src="images/last-post2.jpg" alt="Йога у моря" class="news-img" width="381">
+          <a href="#0" class="news-img-link">
+            <img src="images/last-post2.jpg" alt="Йога у моря" class="news-img">
           </a>
           <div class="news-text">
             <ul class="news-tags">
@@ -169,8 +167,8 @@
           </div>
         </article>
         <article class="news">
-          <a href="#0" class="news-img">
-            <img src="images/last-post3.jpg" alt="Девушка на концерте" class="news-img" width="381">
+          <a href="#0" class="news-img-link">
+            <img src="images/last-post3.jpg" alt="Девушка на концерте" class="news-img" >
           </a>
           <div class="news-text">
             <ul class="news-tags">
@@ -195,8 +193,8 @@
           </div>
         </article>
         <article class="news">
-          <a href="#0" class="news-img">
-            <img src="images/last-post4.jpg" alt="Еда на столе" class="news-img" width="381">
+          <a href="#0" class="news-img-link">
+            <img src="images/last-post4.jpg" alt="Еда на столе" class="news-img" >
           </a>
           <div class="news-text">
             <ul class="news-tags">
@@ -223,8 +221,8 @@
           </div>
         </article>
         <article class="news">
-          <a href="#0" class="news-img">
-            <img src="images/last-post5.jpg" alt="Подушка с принтом" class="news-img" width="381">
+          <a href="#0" class="news-img-link">
+            <img src="images/last-post5.jpg" alt="Подушка с принтом" class="news-img" >
           </a>
           <div class="news-text">
             <ul class="news-tags">
@@ -398,7 +396,7 @@
           <div class="goods-item__img">
             <a href="#0">
               <picture >
-                <source media="(max-width: 768px)" srcset="images/shop-item-mobile1.jpg">
+                <source media="(max-width: 767px)" srcset="images/shop-item-mobile1.jpg">
                 <source media="(max-width: 1200px)" srcset="images/shop-item-tablet1.jpg">
                 <img src="images/shop-item-desk1.jpg" alt="подушка на диване">
               </picture>
@@ -424,7 +422,7 @@
         <section class="goods-item">
           <a href="#0">
             <picture class="goods-item__img">
-              <source media="(max-width: 768px)" srcset="images/shop-item-mobile2.jpg">
+              <source media="(max-width: 767px)" srcset="images/shop-item-mobile2.jpg">
               <source media="(max-width: 1200px)" srcset="images/shop-item-tablet2.jpg">
               <img src="images/shop-item-desk2.jpg" alt="Кукла «Зайчик»">
             </picture>
@@ -437,8 +435,7 @@
             </div>
             <div class="item-price-wrapper">
               <div class="goods-item__price">
-                <span class="goods-price-old">500&#8381; </span>
-                <span class="goods-price-new">400&#8381; </span>
+                <span class="goods-price-new">3500&#8381; </span>
               </div>
               <button class="goods-item__btn">в магазин </button>
             </div>
@@ -447,7 +444,7 @@
         <section class="goods-item">
           <a href="#0">
             <picture class="goods-item__img">
-              <source media="(max-width: 768px)" srcset="images/shop-item-mobile3.jpg">
+              <source media="(max-width: 767px)" srcset="images/shop-item-mobile3.jpg">
               <source media="(max-width: 1200px)" srcset="images/shop-item-tablet3.jpg">
               <img src="images/shop-item-desk3.jpg" alt="Шестиугольная рамка">
             </picture>
@@ -480,19 +477,16 @@
           <li class="social-resource">
             <a class="social-resource-link link-dribble" href="#0">
               <span class="visually-hidden">ссылка на dribbble</span>
-              <!-- <img src="svg/001-dribbble.svg" alt="логотип dribbble.svg" width="20px"> -->
-            </a>
+             </a>
           </li>
           <li class="social-resource">
             <a class="social-resource-link link-pinterest" href="#0">
               <span class="visually-hidden">ссылка на pinterest</span>
-              <!-- <img src="svg/001-pinterest.svg" alt="логотип pinterest" width="20px"> -->
             </a>
           </li>
           <li class="social-resource">
             <a class="social-resource-link link-tumblr" href="#0">
               <span class="visually-hidden">ссылка на tumblr</span>
-              <!-- <img src="svg/003-tumblr.svg" alt="логотип tumblr" width="20px"> -->
             </a>
           </li>
         </ul>
