--- a/index.html
+++ b/index.html
@@ -517,10 +517,10 @@
           <div class="popup-select-radio">
             <span class="popup-radio-text"> Вы подписаны на e-mail рассылку?</span>
             <label class="label-radio">
-              <input type="radio" class="radio" name="radio-mailing">
+              <input type="radio" class="radio" name="radio-mailing" checked="checked">
               <span class="radio-malling-text">Да</span>
             </label>
-            <label>
+            <label class="label-radio">
               <input type="radio" class="radio" name="radio-mailing">
               <span class="radio-malling-text">Нет</span>
             </label>
